--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "bcrypt-nodejs": "0.0.3",
     "bluebird": "^2.9.8",
     "body-parser": "^1.11.0",
+    "chai": "^2.0.0",
     "connect-flash": "^0.1.1",
     "cookie-parser": "^1.3.3",
     "express": "^4.11.2",
@@ -16,7 +17,14 @@
     "passport": "^0.2.1",
     "passport-local": "^1.0.0"
   },
-  "devDependencies": {},
+  "devDependencies": {
+    "chai": "^2.0.0",
+    "gulp": "^3.8.11",
+    "gulp-mocha": "^2.0.0",
+    "mocha": "^2.1.0",
+    "sinon": "^1.12.2",
+    "supertest": "^0.15.0"
+  },
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "start": "node server.js"
