--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "chai": "^2.0.0",
     "connect-flash": "^0.1.1",
     "cookie-parser": "^1.3.3",
+    "cors": "^2.5.3",
     "express": "^4.11.2",
     "express-session": "^1.10.2",
     "mongoose": "^3.8.23",
@@ -21,6 +22,7 @@
     "chai": "^2.0.0",
     "gulp": "^3.8.11",
     "gulp-mocha": "^2.0.0",
+    "gulp-shell": "^0.3.0",
     "mocha": "^2.1.0",
     "sinon": "^1.12.2",
     "supertest": "^0.15.0"
