--- a/package.json
+++ b/package.json
@@ -6,14 +6,12 @@
   "dependencies": {
     "bcrypt": "^0.8.1",
     "bcrypt-nodejs": "0.0.3",
-    "bluebird": "^2.9.8",
     "body-parser": "^1.11.0",
-    "chai": "^2.0.0",
-    "connect-flash": "^0.1.1",
-    "cookie-parser": "^1.3.3",
     "cors": "^2.5.3",
     "express": "^4.11.2",
     "express-session": "^1.10.2",
+    "jsonwebtoken": "^3.2.2",
+    "lodash": "^3.2.0",
     "mongoose": "^3.8.23",
     "passport": "^0.2.1",
     "passport-local": "^1.0.0"
