--- a/package.json
+++ b/package.json
@@ -9,11 +9,13 @@
     "body-parser": "^1.11.0",
     "cors": "^2.5.3",
     "express": "^4.11.2",
+    "express-jwt": "^1.0.0",
     "express-session": "^1.10.2",
     "jsonwebtoken": "^3.2.2",
     "lodash": "^3.2.0",
     "mongoose": "^3.8.23",
     "passport": "^0.2.1",
+    "passport-facebook": "^1.0.3",
     "passport-local": "^1.0.0",
     "request": "^2.53.0"
   },
