--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "express-session": "^1.10.2",
     "jsonwebtoken": "^3.2.2",
     "lodash": "^3.2.0",
+    "mocha": "^2.1.0",
     "mongoose": "^3.8.23",
     "passport": "^0.2.1",
     "passport-facebook": "^1.0.3",
