--- a/package.json
+++ b/package.json
@@ -10,7 +10,7 @@
     "cors": "^2.5.3",
     "express": "^4.11.2",
     "express-jwt": "^1.0.0",
-    "express-session": "^1.10.2",
+    "express-session": "^1.10.3",
     "jsonwebtoken": "^3.2.2",
     "lodash": "^3.2.0",
     "mocha": "^2.1.0",
@@ -18,6 +18,7 @@
     "passport": "^0.2.1",
     "passport-facebook": "^1.0.3",
     "passport-local": "^1.0.0",
+    "passport-twitter": "^1.0.2",
     "request": "^2.53.0"
   },
   "devDependencies": {
